fixed spacing

--- a/main.css
+++ b/main.css
@@ -16,8 +16,7 @@ html {
     font-family: Arial, Helvetica, sans-serif;
     position: relative;
     margin-bottom: 1em;
-    width: 105%;
-    left: -2em;
+    width: 100%;
 }
 
 .topnav li {
